<resources>
    <string name="app_name">DuoGames</string>
    <string name="duogames">DuoGames</string>
    <string name="hangman">HangMan</string>
    <string name="connect_four">Connect Four</string>
    <string name="main_menu">Main Menu</string>
    <string name="player_1_turn">Player 1 Turn</string>
    <string name="by_thanh_kha">by Thanh Kha</string>
    <string name="drop">drop</string>
    <string name="player_turn">Player 1:</string>
    <string name="make_a_guess">make a guess</string>
    <string name="word">Word: </string>
    <string name="used">Used:</string>
    <string name="guess">Guess</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="_0">0</string>
    <string name="players_name_settings">Players Name Settings</string>
    <string name="enter_player_1_username">Enter player 1 username</string>
    <string name="enter_player_2_username">Enter player 2 username</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>
