<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project01.csc214.duogames.HangmanActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <!--SCORE BOARD-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
        <TextView
            android:id="@+id/player1"
            android:text="@string/player_1"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

            <TextView
                android:id="@id/p1_score"
                android:text="@string/_0"
                android:textSize="20sp"
                android:textColor="#FFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player2"
                android:text="@string/player_2"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/p2_score"
                android:text="@string/_0"
                android:textSize="20sp"
                android:textColor="#FFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <!--Used Letters & Correct-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/letter_used"
            android:text="@string/used"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/word_status"
            android:text="@string/word"
            android:paddingStart="5dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--GAME BOARD-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:background="#FFF">

        <ImageView
            android:id="@+id/game_status"
            android:src="@drawable/stage0"
            android:scaleType="fitXY"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />


    </LinearLayout>


    <!--MENU-->
    <LinearLayout
        android:id="@+id/c4_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <Button
            android:id="@+id/MainMenu"
            android:text="@string/main_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="MainMenuPress" />

        <TextView
            android:id="@id/player_turn"
            android:text="@string/player_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/guess"
            android:hint="@string/make_a_guess"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playerWordGuess" />
    </LinearLayout>

</LinearLayout>
