<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project01.csc214.duogames.MainActivity"
    android:background="#83a5b1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000"
        android:gravity="center">

        <TextView
            android:text="Player 1: 0"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="70dp"/>

        <TextView
            android:text="Player 2: 0"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

    <TextView
        android:text="@string/duogames"
        android:textSize="35sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/Name"
        android:text="@string/by_thanh_kha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ConnectFour"
            android:text="@string/connect_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ConnectFourPress"/>

        <Button
            android:id="@+id/Hangman"
            android:text="@string/hangman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="HangManPress"/>

    </LinearLayout>


</LinearLayout>
